<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="score">SCORE</string>
    <string name="naughts">Player 2</string>
    <string name="crosses">Player 1</string>
    <string name="zero">0</string>
    <string name="starting_tip">Crosses go first!</string>
    <string name="crosses_win_message">Crosses win!</string>
    <string name="naughts_win_message">Naughts win!</string>
    <string name="tie_endgame_message">It\'s a tie!</string>
    <string name="splash_screen_img_description">Splash screen image vector.</string>
    <string name="splash_description">A project by Valentin Mihov. Source code available on https://github.com/static-motion</string>
    <string name="game_logo_description">Game Logo</string>
    <string name="single_screen_button">Single Screen</string>
    <string name="nickname_status">Your nickname currently is:</string>
    <string name="change_nickname_button">change</string>
    <string name="create_game_button">Create game</string>
    <string name="join_game_button">Join game</string>
    <string name="multi_screen_button">Multi Screen</string>
    <string name="about_button">about</string>
</resources>