<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Background"
    >

    <android.support.constraint.Guideline
        android:id="@+id/guideline_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"
        />

    <ImageView
        app:srcCompat="@drawable/xo_splash"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/game_logo_description"
        />

    <android.support.v7.widget.AppCompatButton
        style="@style/MenuButton"
        android:id="@+id/btn_start_game"
        android:text="@string/single_screen_button"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal"
        />

    <android.support.v7.widget.AppCompatButton
        style="@style/MenuButton"
        android:id="@+id/btn_connect"
        android:text="@string/multi_screen_button"
        app:layout_constraintTop_toBottomOf="@+id/btn_start_game"
        />

    <android.support.v7.widget.AppCompatButton
        android:text="@string/about_button"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/MenuButton"/>

</android.support.constraint.ConstraintLayout>