<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Background"
    >

    <android.support.constraint.Guideline
        android:id="@+id/guideline_hor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"
        />

    <android.support.v7.widget.AppCompatTextView
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:gravity="center_horizontal"
        android:id="@+id/nickname_status"
        android:text="@string/nickname_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/nickname"
        />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/nickname"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/guideline_hor"
        app:layout_constraintTop_toTopOf="parent"
        />

    <android.support.v7.widget.AppCompatButton
        style="@style/MenuButton"
        android:id="@+id/btn_server"
        android:text="@string/create_game_button"
        app:layout_constraintBottom_toTopOf="@id/btn_client"
        />

    <android.support.v7.widget.AppCompatButton
        style="@style/MenuButton"
        android:id="@+id/btn_client"
        android:text="@string/join_game_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_hor"
        />

</android.support.constraint.ConstraintLayout>