<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.GameActivity"
    style="@style/Background"
    >
    <!-- Game Board -->
    <android.support.v7.widget.GridLayout
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:columnCount="3"
        app:rowCount="3"
        android:background="@color/colorBlack"
        android:padding="0px"
        >

        <com.example.tictactoe.views.GridField
            android:id="@+id/btn_1"
            style="@style/GridBlock"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            />

        <com.example.tictactoe.views.GridField
            android:id="@+id/btn_2"
            style="@style/GridBlock"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <com.example.tictactoe.views.GridField
            android:id="@+id/btn_3"
            style="@style/GridBlock"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <com.example.tictactoe.views.GridField
            android:id="@+id/btn_4"
            style="@style/GridBlock"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_column="0"
            app:layout_rowWeight="1" />

        <com.example.tictactoe.views.GridField
            android:id="@+id/btn_5"
            style="@style/GridBlock"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_column="1"
            app:layout_rowWeight="1" />

        <com.example.tictactoe.views.GridField
            android:id="@+id/btn_6"
            style="@style/GridBlock"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_column="2"
            app:layout_rowWeight="1" />

        <com.example.tictactoe.views.GridField
            android:id="@+id/btn_7"
            style="@style/GridBlock"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_column="0"
            app:layout_rowWeight="1" />

        <com.example.tictactoe.views.GridField
            android:id="@+id/btn_8"
            style="@style/GridBlock"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_column="1"
            app:layout_rowWeight="1" />

        <com.example.tictactoe.views.GridField
            android:id="@+id/btn_9"
            style="@style/GridBlock"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_column="2"
            app:layout_rowWeight="1" />

    </android.support.v7.widget.GridLayout>
    <!-- Horizontal Grid -->
    <View
        style="@style/GridLine"
        android:id="@+id/hor_two"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/hor_three"
        />

    <View
        style="@style/GridLine"
        android:id="@+id/hor_three"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        app:layout_constraintTop_toBottomOf="@id/hor_two"
        app:layout_constraintBottom_toTopOf="@id/stats"
        />

    <!-- Vertical Grid -->
    <View
        style="@style/GridLine"
        android:id="@+id/border_2_ver"
        android:layout_width="5dp"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/border_3_ver"
        />

    <View
        style="@style/GridLine"
        android:id="@+id/border_3_ver"
        android:layout_width="5dp"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toRightOf="@id/border_2_ver"
        app:layout_constraintRight_toRightOf="parent
"
        />

    <!-- Title and stats -->
    <android.support.constraint.ConstraintLayout
        style="@style/Statistics"
        android:id="@+id/stats"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/grid">

        <android.support.constraint.Guideline
            android:id="@+id/guideline_hor_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3333"
            />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_hor_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.6666"
            />

        <TextView
            style="@style/TextStyle"
            android:id="@+id/score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/score"
            android:textSize="35sp"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            style="@style/TextStyle"
            android:id="@+id/player_2"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/naughts"
            app:layout_constraintTop_toBottomOf="@id/score"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/guideline_hor_right"
            />

        <TextView
            style="@style/TextStyle"
            android:id="@+id/player_1"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crosses"
            app:layout_constraintTop_toBottomOf="@id/score"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/guideline_hor_left"
            />

        <TextView
            style="@style/TextStyle"
            android:id="@+id/player_2_score"
            android:textSize="70sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            app:layout_constraintTop_toBottomOf="@id/player_2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/guideline_hor_right"
            app:layout_constraintBottom_toBottomOf="parent"


            />
        <TextView
            style="@style/TextStyle"
            android:id="@+id/player_1_score"
            android:textSize="70sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            app:layout_constraintTop_toBottomOf="@id/player_1"
            app:layout_constraintRight_toLeftOf="@+id/guideline_hor_left"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:id="@+id/status"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/starting_tip"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/player_1_score"
            app:layout_constraintRight_toLeftOf="@id/player_2_score"
            app:layout_constraintTop_toBottomOf="@id/score" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>