<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorWhite"
    >
    <!-- Game Board -->
    <com.example.tictactoe.Grid
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:columnCount="3"
        app:rowCount="3"
        android:background="@color/colorWhite"
        android:padding="0px"
        >

        <com.example.tictactoe.GridBlock
            android:id="@+id/btn_1"
            style="@style/GridBlock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            />

        <com.example.tictactoe.GridBlock
            android:id="@+id/btn_2"
            style="@style/GridBlock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <com.example.tictactoe.GridBlock
            android:id="@+id/btn_3"
            style="@style/GridBlock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <com.example.tictactoe.GridBlock

            android:id="@+id/btn_4"
            style="@style/GridBlock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_column="0"
            app:layout_rowWeight="1" />

        <com.example.tictactoe.GridBlock
            android:id="@+id/btn_5"
            style="@style/GridBlock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_column="1"
            app:layout_rowWeight="1" />

        <com.example.tictactoe.GridBlock
            android:id="@+id/btn_6"
            style="@style/GridBlock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_column="2"
            app:layout_rowWeight="1" />

        <com.example.tictactoe.GridBlock
            android:id="@+id/btn_7"
            style="@style/GridBlock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_column="0"
            app:layout_rowWeight="1" />

        <com.example.tictactoe.GridBlock
            android:id="@+id/btn_8"
            style="@style/GridBlock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_column="1"
            app:layout_rowWeight="1" />

        <com.example.tictactoe.GridBlock
            android:id="@+id/btn_9"
            style="@style/GridBlock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_column="2"
            app:layout_rowWeight="1" />

    </com.example.tictactoe.Grid>
    <!-- Horizontal Grid -->
    <View
        android:id="@+id/border_top_hor"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/colorBlack"
        >
    </View>

    <View
        android:id="@+id/hor_two"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/colorBlack"
        app:layout_constraintTop_toTopOf="@id/border_top_hor"
        app:layout_constraintBottom_toTopOf="@+id/hor_three"
        >
    </View>

    <View
        android:id="@+id/hor_three"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/colorBlack"
        app:layout_constraintTop_toBottomOf="@id/hor_two"
        app:layout_constraintBottom_toTopOf="@+id/border_bot_hor"
        >
    </View>

    <View
        android:id="@+id/border_bot_hor"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/colorBlack"
        app:layout_constraintTop_toBottomOf="@id/grid"
        >
    </View>

    <!-- Vertical Grid -->
    <View
        android:id="@+id/border_top_ver"
        android:layout_width="5dp"
        android:layout_height="match_parent"
        android:background="@color/colorBlack"
        />

    <View
        android:id="@+id/border_2_ver"
        android:layout_width="5dp"
        android:layout_height="match_parent"
        android:background="@color/colorBlack"
        app:layout_constraintLeft_toRightOf="@id/border_top_ver"
        app:layout_constraintRight_toRightOf="@id/border_3_ver"
        />

    <View
        android:id="@+id/border_3_ver"
        android:layout_width="5dp"
        android:layout_height="match_parent"
        android:background="@color/colorBlack"
        app:layout_constraintLeft_toRightOf="@id/border_2_ver"
        app:layout_constraintRight_toRightOf="parent"
        />

    <View
        android:id="@+id/border_last_ver"
        android:layout_width="5dp"
        android:layout_height="match_parent"
        android:background="@color/colorBlack"
        app:layout_constraintRight_toRightOf="parent"

        />

    <!-- Title and stats -->
    <android.support.constraint.ConstraintLayout
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/border_bot_hor">

        <TextView
            android:id="@+id/title"
            android:gravity="center"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_title"
            />

        <TextView
            android:id="@+id/score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/score"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@id/title"
            />
        <TextView
            android:id="@+id/naughts"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/naughts"
            app:layout_constraintTop_toBottomOf="@id/score"
            />
        <TextView
            android:id="@+id/crosses"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crosses"
            app:layout_constraintTop_toBottomOf="@id/score"
            app:layout_constraintRight_toRightOf="parent"
            />
        <TextView
            android:id="@+id/naughtsScore"
            android:textSize="70sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            app:layout_constraintTop_toBottomOf="@id/naughts"
            />
        <TextView
            android:id="@+id/crossesScore"
            android:textSize="70sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            app:layout_constraintTop_toBottomOf="@id/crosses"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:text="@string/starting_tip"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toLeftOf="@id/crossesScore"
            app:layout_constraintLeft_toRightOf="@id/naughtsScore"
            app:layout_constraintTop_toBottomOf="@id/score"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>